fixed spacing issues

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -39,8 +39,16 @@ background-color: rgba(255, 250, 250,);
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  margin-top: 50px;
 }
 
+h3{
+  margin-top: 50px;
+}
+
+form{
+  margin-top: 100px;
+}
 .responsive {
   max-width: 100%;
   height: auto;
